<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    tools:context="gt.edu.cunoc.cunoc.LoginActivity"
    tools:layout_editor_absoluteY="25dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="192dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/marco_input"
            android:hint="@string/Usuario"
            android:inputType="text"
            android:paddingLeft="@dimen/space_input"
            android:paddingRight="@dimen/space_input"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:textSize="24sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/marco_input"
            android:hint="@string/pin"
            android:inputType="numberPassword"
            android:paddingLeft="@dimen/space_input"
            android:paddingRight="@dimen/space_input"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:textSize="24sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_loguearse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        android:theme="@style/styleRaizeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
</android.support.constraint.ConstraintLayout>
